test/sh/error/misc/mismatched_bracket.sk
if true {{
	return 1
}

return 0
